--- a/src/main/resources/com/fitj/components/seances/list-mesSeances.fxml
+++ b/src/main/resources/com/fitj/components/seances/list-mesSeances.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.Text?>
 
 
-<Pane prefHeight="565.0" prefWidth="936.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com/fitj/controllers/seances/ControllerMesSeances.java">
+<Pane prefHeight="565.0" prefWidth="936.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.seances.ControllerMesSeances">
    <children>
       <ListView fx:id="listView" layoutX="35.0" layoutY="28.0" prefHeight="442.0" prefWidth="867.0" />
       <Button fx:id="addSeanceButton" layoutX="412.0" layoutY="521.0" mnemonicParsing="false" onAction="#goToAddSeance" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="+" textFill="WHITE" />
