--- a/src/main/resources/com/fitj/components/sports/list-mes-sport.fxml
+++ b/src/main/resources/com/fitj/components/sports/list-mes-sport.fxml
@@ -7,7 +7,7 @@
 
 <Pane prefHeight="600.0" prefWidth="900.0" scaleShape="false" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.sports.ControllerMesSportList">
    <children>
-       <Button fx:id="addSportButton" layoutX="268.0" layoutY="546.0" mnemonicParsing="false" onAction="#goToAddSport" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="+" textFill="WHITE" />
+       <Button fx:id="addSportButton" layoutX="268.0" layoutY="546.0" mnemonicParsing="false" onAction="#goToAddMySport" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="+" textFill="WHITE" />
        <ListView fx:id="listView" layoutX="17.0" layoutY="25.0" prefHeight="470.0" prefWidth="867.0" />
        <Text fx:id="errorMessage" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="384.28125" />
        <Button fx:id="deleteSportbutton" layoutX="526.0" layoutY="546.0" mnemonicParsing="false" onAction="#deleteSport" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="Supprimer" textFill="WHITE" />
