--- a/src/main/resources/com/fitj/views/materiels/add-mymateriel.fxml
+++ b/src/main/resources/com/fitj/views/materiels/add-mymateriel.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.sports.ControllerAddMesSport">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.materiels.ControllerAddMonMateriel">
     <children>
       <VBox layoutX="1.0" prefHeight="55.0" prefWidth="1000.0">
          <children>
@@ -15,7 +15,7 @@
       </VBox>
       <Pane layoutX="36.0" layoutY="92.0" prefHeight="600.0" prefWidth="900.0" scaleShape="false">
          <children>
-            <Button fx:id="addSportButton" layoutX="393.0" layoutY="547.0" mnemonicParsing="false" onAction="#AddSport" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="+" textFill="WHITE" />
+            <Button fx:id="addMaterielButton" layoutX="393.0" layoutY="547.0" mnemonicParsing="false" onAction="#AddMateriel" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="+" textFill="WHITE" />
             <ListView fx:id="listView" layoutX="39.0" layoutY="44.0" prefHeight="470.0" prefWidth="867.0" />
             <Text fx:id="errorMessage" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="384.28125" />
             <Text fx:id="errorText" fill="RED" layoutX="130.0" layoutY="529.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Error Message" textAlignment="CENTER" wrappingWidth="642.0" />
