--- a/src/main/resources/com/fitj/components/clients/list-client.fxml
+++ b/src/main/resources/com/fitj/components/clients/list-client.fxml
@@ -5,12 +5,12 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Text?>
 
-<Pane prefHeight="600.0" prefWidth="900.0" scaleShape="false" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.admins.ControllerClients">
+<Pane prefHeight="600.0" prefWidth="900.0" scaleShape="false" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.admins.ControllerAdminClients">
    <children>
-       <Button fx:id="setToAdmin" layoutX="461.0" layoutY="545.0" mnemonicParsing="false" onAction="#handleAdminPassage" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="Nouvel admin" textFill="WHITE" />
+       <Button fx:id="setToAdmin" layoutX="527.0" layoutY="545.0" mnemonicParsing="false" onAction="#handleAdminPassage" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="Nouvel admin" textFill="WHITE" />
        <ListView fx:id="listView" layoutX="17.0" layoutY="25.0" prefHeight="470.0" prefWidth="867.0" />
-       <Text fx:id="errorMessage" fill="RED" strokeType="OUTSIDE" strokeWidth="0.0" textAlignment="CENTER" wrappingWidth="384.28125" />
-       <Button fx:id="setToCoach" layoutX="325.0" layoutY="545.0" mnemonicParsing="false" onAction="#handleCoachPassage" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="Nouveau coach" textFill="WHITE" />
+       <Button fx:id="setToCoach" layoutX="259.0" layoutY="545.0" mnemonicParsing="false" onAction="#handleCoachPassage" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="Nouveau coach" textFill="WHITE" />
       <Text fx:id="errorText" fill="RED" layoutX="130.0" layoutY="526.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Error Message" textAlignment="CENTER" wrappingWidth="642.0" />
+      <Button fx:id="seeMoreButton" layoutX="393.0" layoutY="545.0" mnemonicParsing="false" onAction="#handleSeeMoreButton" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="Voir plus" textFill="WHITE" />
    </children>
 </Pane>
