--- a/src/main/resources/com/fitj/views/clients/coachs-client.fxml
+++ b/src/main/resources/com/fitj/views/clients/coachs-client.fxml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.clients.ControllerClientCoachs">
    <children>
       <fx:include source="../../components/headers/header-client.fxml" />
+      <AnchorPane layoutX="49.0" layoutY="80.0" prefHeight="659.0" prefWidth="902.0">
+         <children>
+            <fx:include source="../../components/coachs/list-coach.fxml" />
+         </children>
+      </AnchorPane>
    </children>
 </Pane>
