--- a/src/main/resources/com/fitj/components/clients/list-client.fxml
+++ b/src/main/resources/com/fitj/components/clients/list-client.fxml
@@ -7,10 +7,10 @@
 
 <Pane prefHeight="600.0" prefWidth="900.0" scaleShape="false" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.admins.ControllerAdminClients">
    <children>
-       <Button fx:id="setToAdmin" layoutX="527.0" layoutY="545.0" mnemonicParsing="false" onAction="#handleAdminPassage" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="Nouvel admin" textFill="WHITE" />
-       <ListView fx:id="listView" layoutX="17.0" layoutY="25.0" prefHeight="470.0" prefWidth="867.0" />
-       <Button fx:id="setToCoach" layoutX="259.0" layoutY="545.0" mnemonicParsing="false" onAction="#handleCoachPassage" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="Nouveau coach" textFill="WHITE" />
+       <Button fx:id="setToAdmin" layoutX="528.0" layoutY="546.0" mnemonicParsing="false" onAction="#handleAdminPassage" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="Nouvel admin" textFill="WHITE" />
+       <ListView fx:id="listView" onMouseClicked="#setTextBanButton" layoutX="17.0" layoutY="25.0" prefHeight="470.0" prefWidth="867.0" />
+       <Button fx:id="setToCoach" layoutX="259.0" layoutY="546.0" mnemonicParsing="false" onAction="#handleCoachPassage" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="Nouveau coach" textFill="WHITE" />
       <Text fx:id="errorText" fill="RED" layoutX="130.0" layoutY="526.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Error Message" textAlignment="CENTER" wrappingWidth="642.0" />
-      <Button fx:id="seeMoreButton" layoutX="393.0" layoutY="545.0" mnemonicParsing="false" onAction="#handleSeeMoreButton" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="Voir plus" textFill="WHITE" />
+      <Button fx:id="banButton" layoutX="393.0" layoutY="546.0" mnemonicParsing="false" onAction="#handleBan" prefHeight="26.0" prefWidth="116.0" style="-fx-background-color: #054371;" text="Bannir" textFill="WHITE" />
    </children>
 </Pane>
