--- a/src/main/resources/com/fitj/views/admins/monEspace-admin.fxml
+++ b/src/main/resources/com/fitj/views/admins/monEspace-admin.fxml
@@ -21,7 +21,31 @@
         <tabs>
           <Tab text="Programmes">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                <children>
+                    <TabPane prefHeight="602.0" prefWidth="936.0" tabClosingPolicy="UNAVAILABLE">
+                        <tabs>
+                            <Tab text="Programmes Sportifs">
+                                <content>
+                                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                        <children>
+                                        </children>
+                                    </AnchorPane>
+                                </content>
+                            </Tab>
+                            <Tab text="Programmes Nutritions">
+                                <content>
+                                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                        <children>
+                                            <fx:include source="../../components/programmes/programmesNutritions/list-programmenutrition.fxml" />
+                                        </children>
+                                    </AnchorPane>
+                                </content>
+                            </Tab>
+                        </tabs>
+                    </TabPane>
+                </children>
+                </AnchorPane>
             </content>
           </Tab>
           <Tab text="Séances">
