Mes Clients Add mes clients page Add a generalized methode to init a listView into controller Update Tests

--- a/src/main/resources/com/fitj/views/coachs/mesClients-coach.fxml
+++ b/src/main/resources/com/fitj/views/coachs/mesClients-coach.fxml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.coachs.ControllerCoachMesClients">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <fx:include source="../../components/headers/header-coach.fxml" />
+      <AnchorPane layoutX="50.0" layoutY="85.0">
+            <children>
+                <fx:include source="../../components/clients/list-mesClient.fxml" fx:id="clientList"/>
+            </children>
+      </AnchorPane>
    </children>
 </Pane>
