--- a/src/main/resources/com/fitj/views/coachs/monEspace-coach.fxml
+++ b/src/main/resources/com/fitj/views/coachs/monEspace-coach.fxml
@@ -16,23 +16,87 @@
    <ProgressBar fx:id="coachGrade" layoutX="273.0" layoutY="82.0" prefHeight="35.0" prefWidth="200.0" progress="0.74" style="-fx-accent: red;" />
    <TabPane layoutX="23.0" layoutY="133.0" prefHeight="627.0" prefWidth="936.0" tabClosingPolicy="UNAVAILABLE">
       <tabs>
+         <Tab text="Mes créations">
+            <content>
+               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                  <children>
+                     <TabPane prefHeight="602.0" prefWidth="936.0" tabClosingPolicy="UNAVAILABLE">
+                           <Tab text="Mes programmes">
+                              <content>
+                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                    <children>
+                                       <TabPane prefHeight="602.0" prefWidth="936.0" tabClosingPolicy="UNAVAILABLE">
+                                          <tabs>
+                                             <Tab text="Mes programmes sportifs">
+                                                <content>
+                                                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                                   </AnchorPane>
+                                                </content>
+                                             </Tab>
+                                             <Tab text="Mes programmes nutritions">
+                                                <content>
+                                                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                                      <children>
+                                                         <fx:include source="../../components/programmes/programmesNutritions/list-mes-programmesNutritions.fxml" />
+                                                      </children>
+                                                   </AnchorPane>
+                                                </content>
+                                             </Tab>
+                                          </tabs>
+                                       </TabPane>
+                                    </children>
+                                 </AnchorPane>
+                              </content>
+                           </Tab>
+                           <Tab text="Mes recettes">
+                              <content>
+                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                    <children>
+                                       <fx:include source="../../components/recettes/list-mes-recettes.fxml" />
+                                    </children>
+                                 </AnchorPane>
+                              </content>
+                           </Tab>
+                           <Tab text="Mes séances">
+                              <content>
+                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                              </content>
+                           </Tab>
+                        </TabPane>
+                  </children>
+               </AnchorPane>
+            </content>
+         </Tab>
          <Tab text="Programmes">
             <content>
-               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                  <children>
+                     <TabPane prefHeight="602.0" prefWidth="936.0" tabClosingPolicy="UNAVAILABLE">
+                        <tabs>
+                           <Tab text="Mes programmes sportifs">
+                              <content>
+                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                 </AnchorPane>
+                              </content>
+                           </Tab>
+                           <Tab text="Mes programmes nutritions">
+                              <content>
+                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                    <children>
+                                       <fx:include source="../../components/programmes/programmesNutritions/list-mes-programmesNutritions-achat.fxml" />
+                                    </children>
+                                 </AnchorPane>
+                              </content>
+                           </Tab>
+                        </tabs>
+                     </TabPane>
+                  </children>
+               </AnchorPane>
             </content>
          </Tab>
          <Tab text="Séances">
             <content>
                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-            </content>
-         </Tab>
-         <Tab text="Recettes">
-            <content>
-               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                  <children>
-                     <fx:include source="../../components/recettes/list-mes-recettes.fxml" />
-                  </children>
-               </AnchorPane>
             </content>
          </Tab>
          <Tab text="Informations">
