--- a/src/main/resources/com/fitj/components/seances/view-seance.fxml
+++ b/src/main/resources/com/fitj/components/seances/view-seance.fxml
@@ -1,6 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-
-<Pane prefHeight="746.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.seances.ControllerViewSeance" />
+<Pane prefHeight="746.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.seances.ControllerAddSeance">
+   <children>
+      <Text fx:id="seanceName" layoutX="392.0" layoutY="72.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nom de la séance" textAlignment="CENTER" wrappingWidth="217.0">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Text>
+      <Pane layoutX="113.0" layoutY="410.0" prefHeight="235.0" prefWidth="776.0" style="-fx-border-color: #054371; -fx-background-radius: 10px; -fx-border-radius: 10px; -fx-background-color: lightgrey;">
+         <children>
+            <TextArea fx:id="seanceDescription" layoutX="22.0" layoutY="39.0" prefHeight="173.0" prefWidth="730.0">
+               <padding>
+                  <Insets bottom="2.0" top="2.0" />
+               </padding>
+            </TextArea>
+            <Text fill="#054371" layoutX="22.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Description">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Text>
+         </children>
+      </Pane>
+      <Pane layoutX="113.0" layoutY="121.0" prefHeight="261.0" prefWidth="776.0" style="-fx-border-color: #054371; -fx-background-radius: 10px; -fx-border-radius: 10px; -fx-background-color: lightgrey;">
+         <children>
+            <ListView fx:id="exercicesList" layoutX="37.0" layoutY="46.0" onMouseClicked="#displayExercice" prefHeight="182.0" prefWidth="289.0" style="-fx-border-color: #054371;" />
+            <Text fill="#054371" layoutX="145.0" layoutY="32.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Exercices">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Text>
+            <Text fx:id="exerciceName" layoutX="543.0" layoutY="32.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nom Exercice">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Text>
+            <TextArea fx:id="exerciceDescription" layoutX="451.0" layoutY="46.0" prefHeight="182.0" prefWidth="289.0" style="-fx-border-color: #054371;" />
+         </children>
+      </Pane>
+      <Button fx:id="goBackButton" layoutX="460.0" layoutY="673.0" mnemonicParsing="false" onAction="#goBack" style="-fx-background-color:  #054371;" text="Retour" textFill="WHITE">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Button>
+      <Text fx:id="errorText" fill="RED" layoutX="658.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Message d'erreur" textAlignment="CENTER" wrappingWidth="304.0" />
+      <Pane layoutX="155.0" layoutY="49.0" prefHeight="29.0" prefWidth="138.0" style="-fx-background-color: lightgrey; -fx-border-radius: 5px; -fx-background-radius: 5px; -fx-border-color: #054371;">
+         <children>
+            <Text fx:id="seanceSport" layoutX="20.0" layoutY="20.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sport : nomSport">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Text>
+         </children>
+      </Pane>
+   </children>
+</Pane>
