List séance terminé

--- a/src/main/resources/com/fitj/views/coachs/monEspace-coach.fxml
+++ b/src/main/resources/com/fitj/views/coachs/monEspace-coach.fxml
@@ -59,7 +59,11 @@
                            </Tab>
                            <Tab text="Mes séances">
                               <content>
-                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" >
+                                    <children>
+                                       <fx:include source="../../components/seances/list-mes-seances.fxml" />
+                                    </children>
+                                 </AnchorPane>
                               </content>
                            </Tab>
                         </TabPane>
@@ -96,7 +100,11 @@
          </Tab>
          <Tab text="Séances">
             <content>
-               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" >
+                  <children>
+                     <fx:include source="../../components/seances/list-mes-seances-achat.fxml" />
+                  </children>
+            </AnchorPane>
             </content>
          </Tab>
          <Tab text="Informations">
