--- a/src/main/resources/com/fitj/views/admins/monEspace-admin.fxml
+++ b/src/main/resources/com/fitj/views/admins/monEspace-admin.fxml
@@ -50,7 +50,11 @@
           </Tab>
           <Tab text="Séances">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" >
+                  <children>
+                      <fx:include source="../../components/seances/list-seance.fxml" />
+                  </children>
+              </AnchorPane>
             </content>
           </Tab>
             <Tab text="Alimentation">
