--- a/src/main/resources/com/fitj/views/clients/monEspace-client.fxml
+++ b/src/main/resources/com/fitj/views/clients/monEspace-client.fxml
@@ -43,7 +43,11 @@
             </Tab>
             <Tab text="Séances">
                <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <fx:include source="../../components/seances/list-mes-seances-achat.fxml" />
+                     </children>
+                 </AnchorPane>
                </content>
             </Tab>
             <Tab text="Informations">
