--- a/src/main/resources/com/fitj/views/recettes/detail-recette.fxml
+++ b/src/main/resources/com/fitj/views/recettes/detail-recette.fxml
@@ -1,45 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.recettes.ControllerDetailRecette">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" stylesheets="@../../styles/style.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.fitj.controllers.recettes.ControllerDetailRecette">
     <children>
         <Pane layoutX="139.0" layoutY="213.0" prefHeight="461.0" prefWidth="725.0" style="-fx-border-color: #054371; -fx-background-radius: 10px; -fx-border-radius: 10px; -fx-background-color: lightgrey;">
             <children>
-                <Text fill="#054371" layoutX="296.0" layoutY="110.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Les ingrédients">
+                <Text fill="#054371" layoutX="180.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Les ingrédients">
                     <font>
-                        <Font size="20.0" />
+                        <Font size="16.0" />
                     </font>
                 </Text>
-                <ListView fx:id="listViewIngredientRecette" layoutX="182.0" layoutY="134.0" onMouseClicked="#handlerViewIngredient" prefHeight="263.0" prefWidth="366.0" />
-                <Button fx:id="detailRecetteButton" layoutX="317.0" layoutY="412.0" mnemonicParsing="false" onAction="#goToDetailRecette" prefHeight="27.0" prefWidth="92.0" text="Voir" />
-                <AnchorPane layoutX="278.0" layoutY="171.0" minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
-                <Text fx:id="nomRecette" layoutX="283.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nom de la recette">
+                <ListView fx:id="listViewIngredientRecette" layoutX="180.0" layoutY="135.0" onMouseClicked="#handlerViewIngredient" prefHeight="263.0" prefWidth="366.0" styleClass="emptyRectangle" />
+                <Button fx:id="detailRecetteButton" layoutX="317.0" layoutY="412.0" mnemonicParsing="false" onAction="#goToDetailRecette" prefHeight="27.0" prefWidth="92.0" styleClass="buttonBlue" text="Voir" textFill="WHITE" />
+                <Text fx:id="nomRecette" fill="#054371" layoutX="289.0" layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nom de la recette">
                     <font>
                         <Font size="20.0" />
                     </font>
                 </Text>
             </children>
         </Pane>
-        <Text fill="#054371" layoutX="360.0" layoutY="138.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Détail de la recette">
+        <Text fill="#054371" layoutX="370.0" layoutY="150.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Détail de la recette">
             <font>
                 <Font size="34.0" />
             </font>
         </Text>
-        <VBox fx:id="headerAdmin" visible="false" layoutX="1.0" prefHeight="55.0" prefWidth="1000.0">
+        <VBox fx:id="headerAdmin" layoutX="1.0" prefHeight="55.0" prefWidth="1000.0" visible="false">
             <children>
-                <fx:include source="../../components/headers/header-admin.fxml"/>
+                <fx:include source="../../components/headers/header-admin.fxml" />
             </children>
         </VBox>
-        <VBox fx:id="headerCoach" visible="false" layoutX="1.0" prefHeight="55.0" prefWidth="1000.0">
+        <VBox fx:id="headerCoach" layoutX="1.0" prefHeight="55.0" prefWidth="1000.0" visible="false">
             <children>
-                <fx:include source="../../components/headers/header-coach.fxml"/>
+                <fx:include source="../../components/headers/header-coach.fxml" />
             </children>
         </VBox>
         <Text fx:id="errorText" fill="RED" layoutX="139.0" layoutY="191.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Message d'erreur" textAlignment="CENTER" wrappingWidth="725.0" />
-      <Button fx:id="updateRecetteButton" layoutX="335.0" layoutY="711.0" mnemonicParsing="false" onAction="#updateRecette" prefHeight="43.0" prefWidth="114.0" text="Modifier" />
-      <Button fx:id="deleteRecetteButton" layoutX="585.0" layoutY="711.0" mnemonicParsing="false" onAction="#deleteRecette" prefHeight="43.0" prefWidth="114.0" text="Supprimer" />
+      <Button fx:id="deleteRecetteButton" layoutX="519.0" layoutY="721.0" mnemonicParsing="false" onAction="#deleteRecette" prefHeight="27.0" prefWidth="114.0" styleClass="buttonBlue" text="Supprimer" textFill="WHITE" />
+      <Button fx:id="updateRecetteButton" layoutX="370.0" layoutY="721.0" mnemonicParsing="false" onAction="#updateRecette" prefHeight="27.0" prefWidth="114.0" styleClass="buttonBlue" text="Modifier" textFill="WHITE" />
     </children>
 </Pane>
